# plato-manus

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: action_result.rs  hand.rs  lib.rs  policy.rs
tests/: integration.rs
