[package]
name = "plato-manus"
version = "0.1.0"
edition = "2021"
description = "The hands module — file operations, API calls, and device control translated into a text-based interface for agents"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }
